# networkdesign

./: README.md  networkdesign.cabal  stack.yaml
.github/workflows/: haskell.yml
results/linear/: complete-s01-3-5.txt  complete-s02-3-5.txt  complete-s03-3-5.txt  complete-s04-3-5.txt  complete-s05-3-5.txt  complete-s06-3-5.txt  complete-s07-3-5.txt  complete-s08-3-5.txt  complete-s09-3-5.txt  star-s01-from6.txt  star-s02-from6.txt  star-s03-from6.txt  star-s04-from6.txt  star-s05-from6.txt  star-s06-from6.txt  star-s07-from6.txt  star-s08-from6.txt  star-s09-from6.txt
results/polynomial/: complete-a01-3-5.txt  complete-a02-3-5.txt  complete-a03-3-5.txt  complete-a04-3-5.txt  complete-a05-3-5.txt  complete-a06-3-5.txt  complete-a07-3-5.txt  complete-a08-3-5.txt  complete-a09-3-5.txt  star-a01-from6.txt  star-a02-from6.txt  star-a03-from6.txt  star-a04-from6.txt  star-a05-from6.txt  star-a06-from6.txt  star-a07-from6.txt  star-a08-from6.txt  star-a09-from6.txt
src/: Evolution.hs  GraphHelper.hs  Language.hs  Main.hs  Multicast.hs  Prog.hs  Pruefer.hs
