name:                networkdesign
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/44534/networkdesign
license:             BSD3
license-file:        LICENSE
author:              Clara Waldmann
maintainer:          clara.waldmann@tum.de
copyright:           2020 Clara Waldmann
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable networkdesign
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Pruefer, Prog, GraphHelper, Evolution, Multicast, Language
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, 
                       fgl, containers,
                       smtlib2, smtlib2-pipe, smtlib2-debug,
                       async, random, temporary,
                       optparse-applicative, clock, parsec-numbers
  ghc-options: -threaded -rtsopts -O2
